--- a/index.html
+++ b/index.html
@@ -10,24 +10,69 @@
 <header id="header">
     <form name="form">
         <input type="text" id="search" name="search">
-        <input type="submit" id="searchButton" value="search that pokemon">
-         </form>
+        <input type="submit" name="searchButton" value="search that pokemon">
+    </form>
     <p id="blockError"></p>
 </header>
-<main id="container" class="align">
-    <div id="whiteCube">
-    <div id="content_img">
+<div id="container">
+    <div id="containerPrincipal" class="align">
+        <div id="bloc1">
+        <div id="firstCircle" class="circleRight">
+
+        </div>
+            <div class="circleRight">
+
+            </div>
+            <div class="circleRight">
+
+            </div>
+            <div class="circleRight">
+
+            </div>
+        </div>
+        <div id="containerImg" >
+        <div id="bloc2">
+        <div id="containerBlack">
+
+        </div>
+            <div id="circleContainerImg">
+
+            </div>
+        </div>
+        </div>
+        <div id="bloc3">
+
+        </div>
+    </div>
+    <div id="container2" class="align">
+        <div id="container_pokemon_name">
+            <div id="name" class="align_description">Name :
+                <span id="pokemonName"></span></div>
+
+            <div id="type" class="align_description"> Type :
+                <span id="pokemonType"></span></div>
+
+        </div>
+        <div class="row">
+            <div class="buttonRight"></div>
+            <div class="buttonRight"></div>
+            <div class="buttonRight"></div>
+            <div class="buttonRight"></div>
+        </div>
+        <div class="row">
+            <div class="buttonRight"></div>
+            <div class="buttonRight"></div>
+            <div class="buttonRight"></div>
+            <div class="buttonRight"></div>
+        </div>
+        <div class="rowBottom">
+            <div class="buttonBottom"></div>
+            <div class="buttonBottom" id="buttonRight"></div>
+            <div class="circle"><span id="circleYellow"></span></div>
+        </div>
+
 
     </div>
-    </div>
-</main>
-<div id="container2" class="align">
-    <div id="container_pokemon_name">
-        <p id="name"  class="align_description">Name :</p><p id="pokemonName" class="align_description"></p>
-        <span id="type"> Type :</span>
-
-    </div>
-
 </div>
 </body>
 </html>
