Add feature at the bottom

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
         <div id="containerImg" >
         <div id="bloc2">
         <div id="containerBlack">
-
         </div>
             <div id="circleContainerImg">
 
@@ -41,11 +40,16 @@
         </div>
         </div>
         <div id="bloc3">
+    <div id="blockNumber">
+    <div id="whiteNumber">
 
+    </div>
+    </div>
         </div>
     </div>
     <div id="container2" class="align">
         <div id="container_pokemon_name">
+            <div id="errorBlock"></div>
             <div id="name" class="align_description">Name :
                 <span id="pokemonName"></span></div>
 
