Final commit validate with W3C

--- a/index.html
+++ b/index.html
@@ -16,35 +16,47 @@
 </header>
 <div id="container">
     <div id="containerPrincipal" class="align">
-        <div id="bloc1">
-        <div id="firstCircle" class="circleRight">
-
-        </div>
-            <div class="circleRight">
+        <div id="topBlock">
+            <div id="firstCircle">
 
             </div>
-            <div class="circleRight">
-
+            <div id="pokedex">
+                POKEDEX
             </div>
-            <div class="circleRight">
 
+        </div>
+        <div id="containerImg">
+            <div id="screenBlock">
+                <div id="containerGrey">
+                </div>
+                <div id="circleContainerImg">
+
+                </div>
             </div>
         </div>
-        <div id="containerImg" >
-        <div id="bloc2">
-        <div id="containerBlack">
-        </div>
-            <div id="circleContainerImg">
+        <div id="statsBlock">
+            <div id="blockStat">
+                <div id="attack">
+                    <img id="imgSword" class="imgStat"
+                         src="https://img.clipartfest.com/c88e14818cf956c411fa6debce5fb017_metal-sword-icon-small-clipart-sword-clipart-images_900-900.png" alt="iconSword">
+                    <div id="nbAttack" class="nbStats">
 
+                    </div>
+                </div>
+                <div id="defense">
+                    <img id="imgShield" class="imgStat"
+                         src="https://cdn3.iconfinder.com/data/icons/gray-toolbar-2/512/shield_protection_security-512.png" alt="iconShield">
+                    <div id="nbDefense" class="nbStats">
+
+                    </div>
+                </div>
             </div>
-        </div>
-        </div>
-        <div id="bloc3">
-    <div id="blockNumber">
-    <div id="whiteNumber">
 
-    </div>
-    </div>
+            <div id="blockNumber">
+                <div id="whiteNumber">
+
+                </div>
+            </div>
         </div>
     </div>
     <div id="container2" class="align">
