Nidoran case and program without useless space

--- a/index.html
+++ b/index.html
@@ -38,14 +38,16 @@
             <div id="blockStat">
                 <div id="attack">
                     <img id="imgSword" class="imgStat"
-                         src="https://img.clipartfest.com/c88e14818cf956c411fa6debce5fb017_metal-sword-icon-small-clipart-sword-clipart-images_900-900.png" alt="iconSword">
+                         src="https://img.clipartfest.com/c88e14818cf956c411fa6debce5fb017_metal-sword-icon-small-clipart-sword-clipart-images_900-900.png"
+                         alt="iconSword">
                     <div id="nbAttack" class="nbStats">
 
                     </div>
                 </div>
                 <div id="defense">
                     <img id="imgShield" class="imgStat"
-                         src="https://cdn3.iconfinder.com/data/icons/gray-toolbar-2/512/shield_protection_security-512.png" alt="iconShield">
+                         src="https://cdn3.iconfinder.com/data/icons/gray-toolbar-2/512/shield_protection_security-512.png"
+                         alt="iconShield">
                     <div id="nbDefense" class="nbStats">
 
                     </div>
